--- a/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
+++ b/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
@@ -25,4 +25,13 @@
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>BitzArt.Blazor.Auth.Client</_Parameter1>
+		</AssemblyAttribute>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>BitzArt.Blazor.Auth.Server</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
