--- a/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
+++ b/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
@@ -11,7 +11,7 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/BitzArt/Blazor.Auth</RepositoryUrl>
-		<PackageProjectUrl>https://github.com/BitzArt/Blazor.Auth</PackageProjectUrl>
+		<PackageProjectUrl>https://bitzart.github.io/Blazor.Auth/</PackageProjectUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
