--- a/.github/workflows/Publish.Auth.yml
+++ b/.github/workflows/Publish.Auth.yml
@@ -4,7 +4,7 @@ on:
   repository_dispatch:
   push:
     tags:
-    - "BlazorAuth-v[0-9]+.[0-9]+.[0-9]+*"
+    - "Auth-v[0-9]+.[0-9]+.[0-9]+*"
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -26,7 +26,7 @@ jobs:
           git branch --remote --contains | grep origin/main
 
       - name: Set version
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\/BlazorAuth-v/}" >> $GITHUB_ENV
+        run: echo "VERSION=${GITHUB_REF/refs\/tags\/Auth-v/}" >> $GITHUB_ENV
 
       - name: Build
         run: |
