--- a/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
+++ b/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
@@ -18,7 +18,12 @@
 	<ItemGroup>
 		<None Include="..\..\README.md" Pack="True" Visible="False" PackagePath="\" />
 	</ItemGroup>
-	
+
+	<ItemGroup>
+		<PackageReference Include="BitzArt.Blazor.Cookies.Client" Version="1.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\BitzArt.Blazor.Auth\BitzArt.Blazor.Auth.csproj" />
 	</ItemGroup>
