--- a/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
+++ b/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
@@ -23,6 +23,9 @@
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="BitzArt.Blazor.Cookies.Server" Version="1.0.2" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\BitzArt.Blazor.Auth\BitzArt.Blazor.Auth.csproj" />
