--- a/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
+++ b/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
@@ -20,9 +20,9 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="BitzArt.Blazor.Cookies" Version="0.0.2-Prerelease" />
+		<PackageReference Include="BitzArt.Blazor.Cookies" Version="1.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.2" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.0" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
