Attempt at installing mermaid plugin

--- a/docs/book.toml
+++ b/docs/book.toml
@@ -4,3 +4,9 @@ title = "Blazor.Auth"
 [output.html]
 git-repository-url = "https://github.com/BitzArt/Blazor.Auth"
 git-repository-icon = "fa-github"
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
+[output.html]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
