--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Build Book
         run: |
           cd docs
+          mdbook-mermaid install .
           mdbook build
       - name: Setup Pages
         uses: actions/configure-pages@v2
