--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,11 +20,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install Dependencies
-        run: |
-          curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
-          cargo binstall mdbook
-          cargo binstall mdbook-mermaid
+      - uses: jontze/action-mdbook@v3
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          use-mermaid: true
 #      - name: Install latest mdbook
 #        run: |
 #          tag=$(curl 'https://api.github.com/repos/rust-lang/mdbook/releases/latest' | jq -r '.tag_name')
@@ -32,10 +31,14 @@ jobs:
 #          mkdir mdbook
 #          curl -sSL $url | tar -xz --directory=./mdbook
 #          echo `pwd`/mdbook >> $GITHUB_PATH
-      - name: Build Book
+      - name: Use updated mermaid-init.js with dark mode support
         run: |
           cd docs
           mdbook-mermaid install .
+          curl -sSL https://raw.githubusercontent.com/AnthonyTornetta/mdbook-mermaid/b7ec79d4f91b2dff5afcd5770588c6b6173b1a26/src/bin/assets/mermaid-init.js > src/bin/assets/mermaid-init-new.js
+          mv -f src/bin/assets/mermaid-init-new.js src/bin/assets/mermaid-init.js
+      - name: Build Book
+        run: |
           mdbook build
       - name: Setup Pages
         uses: actions/configure-pages@v2
