--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,8 +35,8 @@ jobs:
         run: |
           cd docs
           mdbook-mermaid install .
-          curl -sSL https://raw.githubusercontent.com/AnthonyTornetta/mdbook-mermaid/b7ec79d4f91b2dff5afcd5770588c6b6173b1a26/src/bin/assets/mermaid-init.js > src/bin/assets/mermaid-init-new.js
-          mv -f src/bin/assets/mermaid-init-new.js src/bin/assets/mermaid-init.js
+          curl https://raw.githubusercontent.com/AnthonyTornetta/mdbook-mermaid/b7ec79d4f91b2dff5afcd5770588c6b6173b1a26/src/bin/assets/mermaid-init.js -o mermaid-init.js
+          mv -f mermaid-init.js src/bin/assets/mermaid-init.js
       - name: Build Book
         run: |
           mdbook build
