--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,11 +31,10 @@ jobs:
 #          mkdir mdbook
 #          curl -sSL $url | tar -xz --directory=./mdbook
 #          echo `pwd`/mdbook >> $GITHUB_PATH
-      - name: Use updated mermaid-init.js with dark mode support
+      - name: Use mermaid plugin
         run: |
           cd docs
           mdbook-mermaid install .
-          wget https://raw.githubusercontent.com/AnthonyTornetta/mdbook-mermaid/b7ec79d4f91b2dff5afcd5770588c6b6173b1a26/src/bin/assets/mermaid-init.js -o mermaid-init.js
           mv -f mermaid-init.js src/bin/assets/mermaid-init.js
       - name: Build Book
         run: |
