--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           cd docs
           mdbook-mermaid install .
+          mkdir -p src/bin/assets
           mv -f mermaid-init.js src/bin/assets/mermaid-init.js
       - name: Build Book
         run: |
