--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.x'
+
       - name: Install dependencies
         run: dotnet restore
 
