--- a/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
+++ b/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
@@ -18,11 +18,19 @@
 	<ItemGroup>
 		<None Include="..\..\README.md" Pack="True" Visible="False" PackagePath="\" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
-		<PackageReference Include="BitzArt.Blazor.Cookies" Version="1.1.2" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.2" />
+		<PackageReference Include="BitzArt.Blazor.Cookies" Version="1.1.4" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.11" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.0" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
