--- a/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
+++ b/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
@@ -21,8 +21,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="BitzArt.Blazor.Cookies.Client" Version="1.1.4" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" Condition="'$(TargetFramework)' == 'net8.0'" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" Condition="'$(TargetFramework)' == 'net9.0'" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
