--- a/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
+++ b/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
@@ -4,6 +4,7 @@
 		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 
 		<PackageId>BitzArt.Blazor.Auth.Server</PackageId>
 		<Authors>BitzArt</Authors>
