--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Client/BitzArt.Blazor.Auth.SampleApp.Client.csproj
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Client/BitzArt.Blazor.Auth.SampleApp.Client.csproj
@@ -10,12 +10,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <ProjectReference Include="..\..\..\src\BitzArt.Blazor.Auth.Client\BitzArt.Blazor.Auth.Client.csproj" />
+	  <ProjectReference Include="..\BitzArt.Blazor.Auth.SampleApp.Shared\BitzArt.Blazor.Auth.SampleApp.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
