--- a/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
+++ b/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
@@ -15,6 +15,10 @@
 		<PackageProjectUrl>https://bitzart.github.io/Blazor.Auth/</PackageProjectUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<SupportedPlatform Include="browser" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\README.md" Pack="True" Visible="False" PackagePath="\" />
