--- a/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
+++ b/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
@@ -25,7 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BitzArt.Blazor.Cookies" Version="1.4.0" />
+		<PackageReference Include="BitzArt.Blazor.Cookies" Version="1.5.0-prerelease" />
 	</ItemGroup>
 
 	<ItemGroup>
