--- a/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
+++ b/src/BitzArt.Blazor.Auth.Client/BitzArt.Blazor.Auth.Client.csproj
@@ -25,8 +25,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BitzArt.Blazor.Cookies.Client" Version="1.5.0-prerelease" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
+		<PackageReference Include="BitzArt.Blazor.Cookies.Client" Version="1.5.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
