--- a/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
+++ b/src/BitzArt.Blazor.Auth.Server/BitzArt.Blazor.Auth.Server.csproj
@@ -29,7 +29,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BitzArt.Blazor.Cookies.Server" Version="1.5.0-prerelease" />
+		<PackageReference Include="BitzArt.Blazor.Cookies.Server" Version="1.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
