--- a/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
+++ b/src/BitzArt.Blazor.Auth/BitzArt.Blazor.Auth.csproj
@@ -25,11 +25,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BitzArt.Blazor.Cookies" Version="1.5.0-prerelease" />
+		<PackageReference Include="BitzArt.Blazor.Cookies" Version="1.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.11.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
@@ -37,7 +37,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
